# ImageTS

./: .gitignore  README.md  image_ts_decode  image_ts_encode  image_ts_eval  image_ts_train  implementation_guide.md  pyproject.toml  run_experiment.sh  solution_idea.md
papers/: ImageGS.txt  TriangleSplatting.txt  references.md
report/assets/data/smoke_pebbles/: metrics.json  rd_curve.csv
scripts/: run_experiment.sh
src/image_ts/: __init__.py  config.py  geometry.py  losses.py  metrics.py  window.py
src/image_ts/cli/: decode_cli.py  encode_cli.py  eval_cli.py  train_cli.py
src/image_ts/codec/: api.py  bitstream.py  quantization.py
src/image_ts/data/: datasets.py  importance.py
src/image_ts/encoder/: densify.py  init.py  multiscale.py  prune.py  train.py
src/image_ts/renderer/: cpu_renderer.py  tile_renderer.py
src/image_ts/utils/: logging.py  memory.py  profiling.py  seed.py
src/image_ts/viz/: images.py  plots.py
src/imagets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_codec.py  test_geometry.py  test_integration.py  test_memory_batching.py  test_renderer.py  test_window.py
